#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package PSHist
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-01-00
2011-06-29 Andy Salnikov
- Adding doxygen comments everywhere
- fixing few const issues
- Added HManager::prof1() methods which do not require ymin/ymax
- Added several exception classes
- Tuple interface is still not good, will need to work on that

Tag: V00-00-01
2011-04-19 Mikhail S. Dubrovin
