@@ -11,6 +11,10 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-01-01 (made from branch version0)
+2011-06-29 Andy Salnikov
+- removed all Tuple stuff
+
 Tag: V00-01-00
 2011-06-29 Andy Salnikov
 - Adding doxygen comments everywhere
